Fixed nav-branding alignment. Initialized template

--- a/css/site.css
+++ b/css/site.css
@@ -66,3 +66,10 @@ pre[class*="language-"] {
     word-break: break-all;
     word-wrap: break-word;
 }
+
+a.nav-link.active {
+    padding-top: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+    padding-left: 0px;
+}
